# C-ohjelmointi

./: CMakeLists.txt  gradecalculator.c  student_grade_report.txt  teht1.c  teht3.c
Projekti_grade_calculator/: gradecalculator.c  student_grade_report.txt
week1/: teht2.c  teht3.c
week2/: teht4.c  teht5.c  teht6.c
week3/: teht7.c  teht8.c  teht9.c
week4/: teht10.c  teht11.c  teht12.c
week5/: iso_kirjain.txt  menu.txt  numerot1.txt  numerot2.txt  teht13.c  teht14.c  teht15.c
week6/: teht16.c  teht17.c  teht18.c
